# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/hap_pack.gni")

shared_library("cameraApp") {
  sources = [
    "cameraApp/src/main/cpp/camera_ability.cpp",
    "cameraApp/src/main/cpp/camera_ability_slice.cpp",
    "cameraApp/src/main/cpp/camera_manager.cpp",
  ]

  deps = [
    "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
    "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface",
    "//foundation/graphic/ui:lite_ui",
    "//foundation/graphic/utils:lite_graphic_utils",
    "//foundation/multimedia/camera_lite/frameworks:camera_lite",
    "//foundation/multimedia/media_lite/frameworks/recorder_lite:recorder_lite",
    "//utils/native/lite/kv_store:kv_store",
  ]

  include_dirs = [
    "cameraApp/src/main/cpp",
    "${aafwk_lite_path}/interfaces/kits/ability_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "//base/startup/syspara_lite/interfaces/kits",
    "//foundation/multimedia/camera_lite/interfaces/kits",
    "//foundation/multimedia/camera_lite/interfaces/kits",
  ]
  ldflags = [
    "-L$ohos_root_path/sysroot/usr/lib",
    "-Wl,-rpath-link=$ohos_root_path/sysroot/usr/lib",
    "-lstdc++",
    "-lcamera_lite",
    "-lsurface",
    "-lrecorder_lite",
  ]
  defines = [
    "ENABLE_WINDOW=1",
    "ABILITY_WINDOW_SUPPORT",
  ]
}

hap_pack("cameraApp_hap") {
  deps = [ ":cameraApp" ]
  mode = "hap"
  json_path = "cameraApp/src/main/config.json"
  ability_so_path = "$root_out_dir/libcameraApp.so"
  force = "true"
  cert_profile = "cert/camera_HarmonyAppProvision_Release.p7b"
  resources_path = "cameraApp/src/main/resources"
  hap_name = "cameraApp"
  privatekey = "HOS Application Provision Release"
}
