# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/hap_pack.gni")

shared_library("gallery") {
  sources = [
    "src/gallery_ability.cpp",
    "src/gallery_ability_slice.cpp",
    "src/picture_ability_slice.cpp",
    "src/player_ability_slice.cpp",
  ]

  include_dirs = [
    "include",
    "${aafwk_lite_path}/interfaces/kits/ability_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "//foundation/multimedia/media_lite/interfaces/kits/player_lite",
    "//base/startup/syspara_lite/interfaces/kits",
  ]

  deps = [
    "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
    "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface",
    "//foundation/graphic/ui:lite_ui",
    "//foundation/graphic/utils:lite_graphic_utils",
    "//foundation/multimedia/media_lite/frameworks/player_lite:player_lite",
    "//foundation/multimedia/media_lite/frameworks/recorder_lite:recorder_lite",
    "//utils/native/lite/kv_store:kv_store",
  ]

  ldflags = [ "-shared" ]

  ldflags += [ "-lstdc++" ]
  ldflags += [ "-lpthread" ]
  ldflags += [ "-L$ohos_root_path/sysroot/usr/lib" ]
  ldflags += [ "-Wl,-rpath-link=$ohos_root_path/sysroot/usr/lib" ]
  ldflags += [
    "-lui",
    "-lsurface",
    "-lplayer_lite",
    "-lability",
  ]

  defines = [
    "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
    "ENABLE_WINDOW=1",
    "ABILITY_WINDOW_SUPPORT",
  ]
}

hap_pack("gallery_hap") {
  deps = [ ":gallery" ]
  mode = "hap"
  json_path = "config.json"
  ability_so_path = "$root_out_dir/libgallery.so"
  force = "true"
  cert_profile = "cert/gallery_HarmonyAppProvision_Release.p7b"
  resources_path = "resources"
  hap_name = "gallery"
  privatekey = "HOS Application Provision Release"
}
