# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/hap_pack.gni")

shared_library("setting") {
  sources = [
    "setting/src/main/cpp/app_ability_slice.cpp",
    "setting/src/main/cpp/app_info_ability_slice.cpp",
    "setting/src/main/cpp/main_ability_slice.cpp",
    "setting/src/main/cpp/setting_about_ability_slice.cpp",
    "setting/src/main/cpp/setting_display_ability_slice.cpp",
    "setting/src/main/cpp/setting_main_ability.cpp",
    "setting/src/main/cpp/setting_utils.cpp",
    "setting/src/main/cpp/setting_wifi_ability_slice.cpp",
    "setting/src/main/cpp/setting_wifi_input_password_ability_slice.cpp",
    "setting/src/main/cpp/wpa_work.c",
  ]

  deps = [
    "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
    "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    "//base/startup/syspara_lite/frameworks/parameter:parameter",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface",
    "//foundation/graphic/ui:lite_ui",
    "//foundation/graphic/utils:lite_graphic_utils",
    "//third_party/wpa_supplicant/wpa_supplicant-2.9:wpa_supplicant",
    "//utils/native/lite/kv_store:kv_store",
  ]

  include_dirs = [
    "setting/src/main/cpp",
    "${aafwk_lite_path}/interfaces/kits/ability_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "//base/startup/syspara_lite/interfaces/kits",
    "//base/security/permission/interfaces/kits/permission_lite",
    "//third_party/wpa_supplicant/wpa_supplicant-2.9/src/common",
  ]

  ldflags = [
    "-lwpa",
    "-lwpa_client",
    "-lsysparam",
    "-lpms_client",
  ]

  defines = [
    "ENABLE_WINDOW=1",
    "ABILITY_WINDOW_SUPPORT",
    "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
  ]
}

hap_pack("setting_hap") {
  deps = [ ":setting" ]
  mode = "hap"
  json_path = "setting/src/main/config.json"
  ability_so_path = "$root_out_dir/libsetting.so"
  force = "true"
  cert_profile = "cert/com.huawei.setting_HarmonyAppProvision_release.p7b"
  resources_path = "setting/src/main/resources"
  hap_name = "setting"
  privatekey = "HOS Application Provision Release"
}
