# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("deviceauth_hals.gni")

hal_common_files = [
  "src/common/hc_parcel.c",
  "src/common/hc_string.c",
  "src/common/hc_task_thread.c",
  "src/common/hc_tlv_parser.c",
  "src/common/json_utils.c",
  "src/common/common_util.c",
  "src/common/alg_loader.c",
]

ohos_static_library("deviceauth_hal_linux") {
  subsystem_name = "security"

  include_dirs = hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "//utils/native/base/include",
    "//third_party/openssl/include/",
    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
  ]

  sources = hal_common_files
  sources += [
    "src/dev_info/3516/hc_dev_info.c",
    "src/linux/L2/crypto_hash_to_point.c",
    "src/linux/L2/huks_adapter.c",
    "src/linux/hc_condition.c",
    "src/linux/hc_file.c",
    "src/linux/hc_init_protection.c",
    "src/linux/hc_mutex.c",
    "src/linux/hc_thread.c",
    "src/linux/hc_time.c",
    "src/linux/hc_types.c",
  ]

  cflags = [ "-DHILOG_ENABLE" ]

  deps = [
    "//base/security/huks/interfaces/innerkits/huks_standard/main:libhukssdk",
    "//third_party/cJSON:cjson_static",
    "//third_party/openssl:libcrypto_static",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

ohos_static_library("deviceauth_hal_liteos") {
  subsystem_name = "security"

  include_dirs = hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "//utils/native/base/include",
  ]

  sources = hal_common_files
  sources += [
    "src/dev_info/watch/hc_dev_info.c",
    "src/liteos/L0/hc_init_protection.c",
    "src/liteos/L0/huks_adapter.c",
    "src/liteos/hc_condition.c",
    "src/liteos/hc_file.c",
    "src/liteos/hc_mutex.c",
    "src/liteos/hc_thread.c",
    "src/liteos/hc_time.c",
    "src/liteos/hc_types.c",
  ]

  cflags = [ "-DHILOG_ENABLE" ]

  deps = [
    "//third_party/cJSON:cjson",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
