# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/deviceauth/deviceauth_env.gni")

if (target_os == "liteos") {
  hals_inc_path = [
    "${hals_path}/inc/common",
    "${hals_path}/inc/liteos",
    "${hals_path}/inc/dev_info/watch",
  ]
  hal_module_name = "deviceauth_hal_liteos"
} else {
  hals_inc_path = [
    "${hals_path}/inc/common",
    "${hals_path}/inc/linux",
    "${hals_path}/inc/dev_info/3516",
  ]
  hal_module_name = "deviceauth_hal_linux"
}
