# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/deviceauth/hals/deviceauth_hals.gni")
import("//build/ohos.gni")
import("deviceauth.gni")

ohos_static_library("deviceauth") {
  subsystem_name = "security"
  part_name = "deviceauth_standard"

  include_dirs = inc_path
  include_dirs += hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "//utils/native/base/include",
  ]

  sources = deviceauth_files

  cflags = [ "-DHILOG_ENABLE" ]
  cflags += build_flags
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${hals_path}:${hal_module_name}",
    "//third_party/cJSON:cjson_static",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

ohos_prebuilt_etc("auth_service.rc") {
  source = "${frameworks_path}/src/deviceauth_service.rc"
  relative_install_dir = "init"
  subsystem_name = "security"
  part_name = "deviceauth_standard"
}

group("etc") {
  deps = [ ":auth_service.rc" ]
}

ohos_executable("deviceauth_service") {
  subsystem_name = "security"
  part_name = "deviceauth_standard"
  install_enable = true

  include_dirs = inc_path
  include_dirs += hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "//utils/native/base/include",
  ]

  sources = deviceauth_ipc_files
  sources += [ "${frameworks_path}/src/ipc_service.c" ]

  cflags = [ "-DHILOG_ENABLE" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    ":auth_service.rc",
    ":deviceauth",
    "${hals_path}:${hal_module_name}",
    "//third_party/cJSON:cjson_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
}

ohos_shared_library("deviceauth_sdk") {
  subsystem_name = "security"
  part_name = "deviceauth_standard"

  include_dirs = inc_path
  include_dirs += hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "//utils/native/base/include",
  ]

  sources = deviceauth_ipc_files
  sources += [ "${frameworks_path}/src/ipc_sdk.c" ]

  cflags = [ "-DHILOG_ENABLE" ]
  cflags += build_flags
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${hals_path}:${hal_module_name}",
    "//third_party/cJSON:cjson_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
}
