# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn_standard/appspawn.gni")
import("//build/test.gni")

group("unittest") {
  testonly = true

  deps = [
    "unittest/app_spawn_msg_peer_test:unittest",
    "unittest/app_spawn_server_test:unittest",
    "unittest/app_spawn_socket_test:unittest",
    "unittest/client_socket_test:unittest",
    "unittest/server_socket_test:unittest",
  ]
}

group("moduletest") {
  testonly = true

  deps = [ "moduletest:moduletest" ]
}

config("appspawn_test_config") {
  configs = []

  defines = []

  include_dirs = [
    "${appspawn_path}/test/mock/include",
    "${appspawn_path}/include",
  ]
}

ohos_source_set("appspawn_test_source") {
  testonly = true

  sources = []

  include_dirs = [ "//third_party/json/include" ]

  public_configs = [
    "//utils/native/base:utils_config",
    ":appspawn_test_config",
  ]

  public_deps = [
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  deps = []

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
