# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("initsync") {
  features = [ "//base/startup/init_lite/initsync:libinitsync_shared" ]
}

shared_library("libinitsync_shared") {
  sources = [ "src/init_sync.c" ]
  cflags = [ "-Wall" ]
  include_dirs = [
    "//base/startup/init_lite/initsync/include",
    "//base/startup/init_lite/interfaces/kits",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
}

static_library("libinitsync_static") {
  sources = [ "src/init_sync.c" ]
  cflags = [ "-Wall" ]
  include_dirs = [
    "//base/startup/init_lite/initsync/include",
    "//base/startup/init_lite/interfaces/kits",
  ]
  public_deps = [ "//third_party/bounds_checking_function:libsec_static" ]
}
