# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//base/update/updater"

ohos_executable("updater") {
  defines = [ "BUILD_OHOS" ]
  sources = [
    "main.cpp",
    "updater.cpp",
    "updater_main.cpp",
  ]

  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/interfaces/kits/include/",
    "//third_party/bounds_checking_function/include",
    "//base/update/updater/services/include/package",
    "//base/update/updater/services/package/pkg_manager",
    "//base/update/updater/services/include/log",
    "//drivers/framework/ability/sbuf/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/core",
    "//drivers/framework/include/osal",
    "//drivers/framework/include/utils",
    "//drivers/framework/include/config",
    "//drivers/framework/include",
    "//drivers/peripheral/input/hal/include",
    "//drivers/peripheral/input/interfaces/include",
    "//third_party/bounds_checking_function/include",
    "//base/update/updater/services",
    "//base/update/updater/services/ui",
    "//base/update/updater/services/include",
  ]

  deps = [
    "//base/update/updater/interfaces/kits/misc_info:libmiscinfo",
    "//base/update/updater/interfaces/kits/packages:libpackageExt",
    "//base/update/updater/services/applypatch:libapplypatch",
    "//base/update/updater/services/diffpatch/patch:libpatch",
    "//base/update/updater/services/fs_manager:libfsmanager",
    "//base/update/updater/services/log:libupdaterlog",
    "//base/update/updater/services/package:libupdaterpackage",
    "//base/update/updater/services/ui:libui",
    "//base/update/updater/utils:libutils",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/bzip2:libbz2",
    "//third_party/libdrm:libdrm",
    "//third_party/lz4:liblz4_static",
    "//third_party/openssl:crypto_source",
    "//third_party/openssl:ssl_source",
    "//third_party/zlib:libz",
  ]

  install_enable = true
  part_name = "updater"
}
